Bug 161310 - French missing translation insert autotext
Summary: French missing translation insert autotext
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:25.2.0 target:24.2.5 target:24...
Keywords:
Depends on:
Blocks: AutoText Not-Localizable
  Show dependency treegraph
 
Reported: 2024-05-28 21:15 UTC by Regis Perdreau
Modified: 2024-07-01 05:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Autotext menu (9.80 KB, image/png)
2024-05-28 21:15 UTC, Regis Perdreau
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regis Perdreau 2024-05-28 21:15:56 UTC
Created attachment 194408 [details]
Autotext menu

Hi,

See icon "insert" in the insertion toolbar. Open menu, you will see "My Autotext" when french language in use.
See screenshot.

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 6; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded

Régis
Comment 1 Julien Nabet 2024-05-29 10:25:42 UTC
On which LO module do you get this?
I tested each module, the most resembling is Writer but I don't have this entry, only the 3 others.
(tested on pc Debian x86-64 with master sources updated today and with LO Debian package 24.2.3.2)
Comment 2 Regis Perdreau 2024-05-29 13:32:36 UTC
To reproduce :

- Open a new Writer document with fr langage UI
- Type a random string like "test my beautiful autotext"
- Select it
- Open "outils" "autotext"
- Select "Mes autotextes"
- Click the down arrow on the button "Autotexte"
- Select "Nouveau" Option in the drop down menu
- Hit "Fermer" to close Autotexte dialogue
- Now click on insert icon from the insertion toolbar
- In the drop down menu, you will see "My autotext" option instead "Mes autotextes"

If you create a new autotext category, the option is what you define. 

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: db94d1079a83eae9ac0c8d92f4547698d016daf8
CPU threads: 6; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 3 Regis Perdreau 2024-05-29 14:52:28 UTC
So by default, the  autotext file mytests.bau  is not translated. We have the string "My Autotext" inside. In this file are stored user defined autotext.
Comment 4 Julien Nabet 2024-05-30 16:56:39 UTC
Thank you for the detailed explanation, I could reproduce this.
Comment 5 Commit Notification 2024-06-30 04:27:49 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/696eb4b4e55ce26cee9aee2c76a7125df91ae0d6

tdf#161310 Translate My AutoText in Insert toolbar

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Aron Budea 2024-06-30 11:03:35 UTC
Backports to 24.8 and 24.2 are on gerrit.
Comment 7 Commit Notification 2024-06-30 17:31:22 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c791834c73b2e37d05b6c99e43a6ed2047033e42

tdf#161310 Translate My AutoText in Insert toolbar

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-07-01 05:54:38 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a694fd01601ada046df2fcc14facdd83b6541628

tdf#161310 Translate My AutoText in Insert toolbar

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.