tdf#161310 Translate My AutoText in Insert toolbar

Use same pattern as 42e6e26255b21c1bfde893f5aaf23d4a37ecee91
and dffdc0b1995e2b24304ce0651ca886bbf9cf4f95

Change-Id: If36ecdcbb771bfcde9836203e84586045d039c8e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169693
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>